# rtems-schedsim

./: .configure.swp  .gitignore  ChangeLog  Makefile.am  README  configure.ac
aclocal/: check-posix.m4  check-smp.m4  enable-posix.m4  enable-rtemsdir.m4  enable-smp.m4
schedsim/: ChangeLog  Makefile.am  README  UsingTheSchedulerSimulator.txt  configure.ac
schedsim/rtems/: ChangeLog  Makefile.am  debugio.c  interr.c  rtems_init.c  rtems_sched.h  wkspace.c
schedsim/rtems/sched_cpu/: cpu.c  cpu_asm.c  newlib.h  stdatomic.h
schedsim/rtems/sched_cpu/rtems/: asm.h
schedsim/rtems/sched_cpu/rtems/score/: cpu.h  cpu_asm.h  no_cpu.h  types.h
schedsim/rtems/sched_cpu/sys/: cpuset.h
schedsim/shell/: ChangeLog  Makefile.am  run_scenarios
schedsim/shell/schedsim_cbs/: Makefile.am  config.c
schedsim/shell/schedsim_cluster01/: Makefile.am  config.c
schedsim/shell/schedsim_cluster01/scenarios/: affinity_api_01.expected  affinity_api_01.scen
schedsim/shell/schedsim_cluster02/: Makefile.am  config.c
schedsim/shell/schedsim_edf/: Makefile.am  config.c
schedsim/shell/schedsim_priority/: ChangeLog  Makefile.am  config.c  printheir_executing.c  schedsim.cc  smp_stub.c  wrap_thread_dispatch.c
schedsim/shell/schedsim_priority/scenarios/: inherit_priority.expected  inherit_priority.scen  script01.expected  script02.expected  script02.output  script03.expected  script03.output  script04.expected  script04.output  script05.expected  script06.expected  script06.output
schedsim/shell/schedsim_simple/: Makefile.am  config.c
schedsim/shell/schedsim_smppriority/: Makefile.am  config.c
schedsim/shell/schedsim_smppriority_affinity/: Makefile.am  config.c
schedsim/shell/schedsim_smppriority_affinity/scenarios/: cpus1_exercise_affinity_api.expected  cpus1_exercise_affinity_api.scen  cpus2_affinity_case1.expected  cpus2_affinity_case1.scen  cpus2_affinity_case2.expected  cpus2_affinity_case2.scen  cpus2_affinity_case3.expected  cpus2_affinity_case3.scen  cpus2_affinity_case4.expected  cpus2_affinity_case4.scen  cpus2_affinity_migrate_case1.expected  cpus2_affinity_migrate_case1.scen  cpus2_affinity_migrate_case2.expected  cpus2_affinity_migrate_case2.scen  cpus4_affinity_api_case1.expected  cpus4_affinity_api_case1.scen  cpus4_affinity_api_case2.expected  cpus4_affinity_api_case2.scen  cpus4_affinity_api_case3.expected  cpus4_affinity_api_case3.scen  cpus4_affinity_api_case4.expected  cpus4_affinity_api_case4.scen  cpus4_affinity_block_case1.expected  cpus4_affinity_block_case1.scn  cpus4_affinity_case1.expected  cpus4_affinity_case1.scen  cpus4_affinity_case2.expected  cpus4_affinity_case2.scen  cpus4_affinity_create_case1.expected  cpus4_affinity_create_case1.scen  cpus4_affinity_migrate_case1.expected  cpus4_affinity_migrate_case1.scen  cpus4_affinity_migrate_case2.expected  cpus4_affinity_migrate_case2.scen  cpus4_affinity_migrate_case3.expected  cpus4_affinity_migrate_case3.scen  cpus4_affinity_overlap_case1.expected  cpus4_affinity_overlap_case1.scen  cpus4_affinity_priority_case1.expected  cpus4_affinity_priority_case1.scen  (+10 more)
schedsim/shell/schedsim_smpsimple/: ChangeLog  Makefile.am  README  TODO  add_commands.c  config.c  main_current_cpu.c  main_dispatch.c  main_dump_all_cpus.c  main_dump_ready_tasks.c  printheir_executing.c  schedsim.cc  smp_stub.c  wrap_thread_dispatch.c
schedsim/shell/schedsim_smpsimple/scenarios/: cpus1_mode.expected  cpus1_mode.scen  cpus1_priority.expected  cpus1_priority.scen  cpus1_resume_on_primary.expected  cpus1_resume_on_primary.scen  cpus1_suspend_on_primary.expected  cpus1_suspend_on_primary.scen  cpus4_inherit_priority.expected  cpus4_inherit_priority.scen  cpus4_mode_case1.expected  cpus4_mode_case1.scen  cpus4_mode_case2.expected  cpus4_mode_case2.scen  cpus4_nonpreempt_case1.expected  cpus4_nonpreempt_case1.scen  cpus4_pick_older.expected  cpus4_pick_older.scen  cpus4_priority.expected  cpus4_priority.scen  cpus4_simple_nopreempt.expected  cpus4_simple_nopreempt.scen  cpus4_simple_preemption.expected  cpus4_simple_preemption.scen  cpus4_suspend_on_all.expected  cpus4_suspend_on_all.scen  cpus4_suspend_on_primary.expected  cpus4_suspend_on_primary.scen  cpus4_suspend_on_secondary.expected  cpus4_suspend_on_secondary.scen
schedsim/shell/shared/: Makefile.am  add_commands_stub.c  commands.c  getopt.c  getthreadexecuting.c  getthreadheir.c  lookup_semaphore.c  lookup_task.c  main_clocktick.c  main_currentcpu.c  main_dispatch.c  main_dump_all_cpus.c  main_echo.c  main_executing.c  main_heir.c  main_help.c  main_rtemsinit.c  main_semcreate.c  main_semdelete.c  main_semflush.c  main_semobtain.c  main_semrelease.c  main_taskcreate.c  main_taskdelete.c  main_taskgetaffinity.c  main_taskmode.c  main_taskpriority.c  main_taskresume.c  main_taskscheduler.c  main_tasksetaffinity.c  main_tasksuspend.c  main_taskwakeafter.c  printheir_executing.c  schedsim.c  schedsim_disable_dispatch.c  schedsim_shell.h  shell_cmdset.c  shell_makeargs.c  smp_stub.c  wrap_thread_dispatch.c
schedsim/shell/shared/include/: shell.h
schedsim/shell/shared/include/newlib/: _ansi.h  getopt.h
schedsim/shell/shared/include/rtems/: confdefs.h
